# homework

./: Unit2Part4.py  Unit3Part1.py  ~$it1Submission1.docx
C119T/Unit 2/: 36546.py  Part2.py  Unit2Part3.py
C119T/Unit 3/: Unit3Part1.py
C119T/Unit 4/: intellipathShit.py
C119T/Unit 5/: catzz.py  postingtoaform.html  postingtoaform.py  selectionList.html
CS219T/Unit1/: countCounter.py  submission1.py  submission2.py  submission3.py  unit1Submission1.docx  unit1Submission1.py  unit1Submission2.docx  unit1Submission3.docx
CS219T/Unit2/: submission1.py  submission2.py  submission3.py  unit2submission1.docx  unit2submission2.docx  unit2submission3.docx
CS219T/Unit3/: submission1.py  submission2.py  unit3submission1.docx
CS219T/Unit4/: submission1.py  unit4submission1.docx  unit4submission2.docx
CS221T/: unit1submissionNode.docx  ~$it1submissionCorrected.docx
CS221T/Unit 4/: unit4DML.sql
CS221T/Unit1/: unit1sql.sql  unit1submissionCorrected.docx
CS221T/Unit2/: unit2fk  (+2 more)
CS288/: CMakeLists.txt
CS288/Unit1/: CS288_U1_node1_IanSabey.docx  CS288_U1_node2_IanSabey.docx  Calculator.h  Fibonacci.h  calculator.cpp  fibonacci.cpp  main.cpp
CS288/Unit2/: CS288_IanSabey_Unit2Submission1.docx  CS288_IanSabey_Unit2Submission2.docx  Definition.h  Strings.h  main.cpp
CS288/Unit3/: CS288_IanSabey_Unit3Submission1.docx  CS288_IanSabey_Unit3Submission2.docx  Vehicles.h  Vertebrates.h  main.cpp
CS288/Unit4/: Rectangles.h  main.cpp
Unit 2/: Part1.py
Unit 3/: Unit3Part1.py  unit3-scratch.py
Unit 4/: Unit4.py
Unit 5/: changeCounter.py  selectionList.py
(+7 files in other folders)
