cmake_minimum_required(VERSION 3.12)
project(CS288)

set(CMAKE_CXX_STANDARD 14)

# You will want to make sure the correct executable line is active to run the unit you are interested in.

#add_executable(CS288 Unit1/main.cpp)
#add_executable(CS288 Unit2/main.cpp)
add_executable(CS288 Unit3/main.cpp Unit3/Vertebrates.h)
#add_executable(CS288 Unit4/main.cpp)
#add_executable(CS288 Unit5/main.cpp)